fix: adjust positioning of footer element for improved alignment

--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -59,8 +59,8 @@
         background-color: $color-highLight;
         position: absolute;
         top: 50%;
-        transform: translateY(-50%);
-        left: -1rem;
+        transform: translateY(-43%);
+        left: -0.75rem;
         opacity: 0;
       }
 
